compiler/testData/diagnostics/tests/dynamicTypes/unsupported.kt
val foo: <!UNSUPPORTED!>dynamic<!> = 1

fun foo() {
    class C {
        val foo: <!UNSUPPORTED!>dynamic<!> = 1
    }
}
